--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 -->
 <html>
 	<head>
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-CCSH8BEFF0"></script>
+		<script>
+ 			window.dataLayer = window.dataLayer || [];
+ 			function gtag(){dataLayer.push(arguments);}
+  			gtag('js', new Date());
+
+  			gtag('config', 'G-CCSH8BEFF0');
+		</script>
 		<title>Gabriel Push</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
