--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 							
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
-								<li><a href="https://gabepush-resume.tiiny.site" class="button scrolly">My Resume</a></li>							</ul>
+								<li><a href="https://gabepushresume.tiiny.site" class="button scrolly">My Resume</a></li>							</ul>
 						</div>
 					</section>
 
@@ -100,7 +100,7 @@
 								    <li>William J. Branstrom Prize (Top 5% of Class)</li>
 								    <li>Dean's List (All Semesters)</li></p>
 									<ul class="actions">
-										<li><a href="https://gabepush-resume.tiiny.site" class="button">Learn more</a></li>
+										<li><a href="https://gabepushresume.tiiny.site" class="button">Learn more</a></li>
 									</ul>
 								</div>
 							</div>
